<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_stat_home"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_stat_person"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_fav"
            android:title="@string/menu_fav" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_image_contact_us"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_image_feedback"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_image_about_us"
            android:title="@string/menu_about_us" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_image_share_white"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_image_star"
            android:title="@string/menu_star" />
    </group>
</menu>
