<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">


    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.prepare.prepareurself.dashboard.ui.fragment.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/dashboard_fragment">
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.prepare.prepareurself.profile.ui.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment">

    </fragment>

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.prepare.prepareurself.aboutus.ui.AboutusFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/aboutus_fragment">

    </fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.prepare.prepareurself.feedback.ui.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/feedback_fragment">

    </fragment>

</navigation>