<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".authentication.ui.LoginFragment"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:id="@+id/mainlayout">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>

       <EditText
           android:id="@+id/et_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/e_mail"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           style="@style/EditTextViewStyleLoginRegister"
           android:inputType="textEmailAddress"
           android:textColorHighlight="@color/white" />

       <EditText
           android:id="@+id/et_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           android:layout_marginLeft="20dp"
           style="@style/EditTextViewStyleLoginRegister"
           android:layout_marginRight="20dp"
           android:layout_marginTop="15dp"
           android:inputType="textPassword" />

       <Button
           android:id="@+id/btn_login"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/button_custom"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:padding="15dp"
           android:layout_marginTop="60dp"
           android:fontFamily="@font/roboto_regular"
           android:textColor="@android:color/white"
           android:text="@string/login"
           android:textSize="16sp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end"
           android:text="Forgot Password ?"
           android:textSize="16sp"
           android:paddingTop="5dp"
           android:paddingBottom="5dp"
           android:paddingStart="@dimen/padding_10"
           android:paddingEnd="@dimen/padding_10"
           android:background="?attr/selectableItemBackground"
           android:id="@+id/tv_forgot_password"
           android:textColor="@color/colorPrimaryDark"
           android:fontFamily="@font/roboto_regular"
           android:layout_marginTop="20dp"
           android:layout_marginEnd="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_right"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:id="@+id/arrow"
        android:layout_gravity="center_horizontal"
        android:background="?attr/selectableItemBackgroundBorderless" />
    <TextView
        android:id="@+id/swipeRight1"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="New user?"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/swipeRight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
</ScrollView>